# slay_the_spire_2_agent_harness

./: .gitignore  LICENSE  README.md  pyproject.toml
agent_dashboard/: __init__.py  server.py
agent_dashboard/static/: app.js  index.html  styles.css  tokens.css
agent_harness/: README.md  __init__.py  __main__.py  action.schema.json  codex_cli.py  encounters.py  memory.py  runner.py  state_prompt.py  trace.py
agent_harness/examples/: sample_combat_state.json
agent_profiles/codex_base/: AGENTS.md  ENCOUNTERS.md  ENCOUNTER_RESEARCH_NOTES.md
docs/: BENCHMARK.md
live_bridge/: README.md  __init__.py  __main__.py  client.py  normalize.py
patches/: cli-anything-sts2-bridge-compat.patch
scripts/: setup_live_bridge.sh
